k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-api
  namespace: dev
spec:
  selector:
    app: payment-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
