k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-app
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-app
  template:
    metadata:
      labels:
        app: payment-app
    spec:
      containers:
      - name: payment-app
        image: sousvkeet/payment-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: payment-app
  namespace: dev
spec:
  selector:
    app: payment-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
